[package]
name = "osmloadrust"
version = "0.1.0"
authors = ["foobert <0x002a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.14"
anyhow = "1.0"
log = "0.4"
env_logger = "0.7"
rusqlite = "0.23"
clap = "2.33"
